Complete scan through files after migration

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,6 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = server-tools/_version.py
-versionfile_build = server-tools/_version.py
+versionfile_source = servertools/_version.py
+versionfile_build = servertools/_version.py
 tag_prefix = ''
