--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==1.1.2
+Pillow==7.1.2
 amcrest==1.7.1
 flask-jsonpify==1.5.0
 markovify==0.8.0
@@ -10,6 +11,7 @@ pygsheets==2.0.3.1
 pyowm==2.10.0
 python-yr==1.4.5
 pyyaml==5.3.1
+requests==2.23.0
 roku==4.1.0
 selenium>=3.141.0
 sqlalchemy==1.3.17
