Update refresh script to force dependency updates

--- a/config.yaml
+++ b/config.yaml
@@ -6,4 +6,5 @@ REPO:
   DIR: ${HOME}/extras/${REPO_NAME}
   VENV: ${HOME}/venvs/stools/bin/python
   DESC: A package for routines performed by my home automation server
-  DEPS: https://github.com/barretobrock/slacktools/tarball/master#egg=slacktools https://github.com/barretobrock/kavalkilu/tarball/master#egg=kavalkilu
+  DEP1: https://github.com/barretobrock/slacktools/tarball/master#egg=slacktools
+  DEP2: https://github.com/barretobrock/kavalkilu/tarball/master#egg=kavalkilu
