--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,18 @@
-Flask==1.1.2
-Pillow==7.1.2
 amcrest==1.7.1
-flask-jsonpify==1.5.0
-grafana_api==1.0.2
-kavalkilu
-markovify==0.8.0
+Flask>=1.1.2
+kavalkilu>=1.1.22
 meteocalc==1.1.0
-numpy==1.18.4
 pandas==1.0.3
+Pillow==7.1.2
 phue==1.1
 pygsheets==2.0.3.1
 pyowm==2.10.0
-python-yr==1.4.5
-pyyaml==5.3.1
-requests==2.23.0
+PyYAML==5.3.1
+requests>=2.23.0
 roku==4.1.0
-selenium>=3.141.0
-slacktools
-sqlalchemy==1.3.17
+selenium==3.141.0
+servertools>=1.1.13
+setuptools==46.4.0
+slacktools>=0.0.5
+SQLAlchemy==1.3.17
+versioneer==0.18
