--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,6 @@ selenium==3.141.0
 servertools>=1.1.13
 setuptools==46.4.0
 slacktools>=0.0.5
+speedtest-cli==2.1.2
 SQLAlchemy==1.3.17
 versioneer==0.18
