--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ openwrt-luci-rpc==1.1.3
 pandas==1.0.3
 Pillow==7.1.2
 phue==1.1
+pyecobee==1.3.5
 pygsheets==2.0.3.1
 pyowm==2.10.0
 python-yr==1.4.5
