--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ flask_jsonpify==1.5.0
 grafana-api==1.0.2
 influxdb==5.3.0
 kavalkilu>=1.1.22
+markovify==0.8.2
 meteocalc==1.1.0
 numpy==1.18.4
 openwrt-luci-rpc==1.1.3
