--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 amcrest==1.7.1
+beautifulsoup4==4.9.1
 Flask>=1.1.2
 flask_jsonpify==1.5.0
 grafana-api==1.0.2
-influxdb==5.3.0
 kavalkilu>=1.1.22
+lxml==4.5.1
 markovify==0.8.2
 meteocalc==1.1.0
+nltk==3.5
 numpy==1.18.4
 openwrt-luci-rpc==1.1.3
 pandas==1.0.3
