--- a/config.yaml
+++ b/config.yaml
@@ -6,5 +6,6 @@ REPO:
   DIR: ${HOME}/extras/${REPO_NAME}
   VENV: ${HOME}/venvs/stools/bin/python
   DESC: A package for routines performed by my home automation server
-  DEP1: git+https://github.com/barretobrock/slacktools.git#egg=slacktools
-  DEP2: git+https://github.com/barretobrock/kavalkilu.git#egg=kavalkilu
+  DEPS:
+    - git+https://github.com/barretobrock/slacktools.git#egg=slacktools
+    - git+https://github.com/barretobrock/kavalkilu.git#egg=kavalkilu
