--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ beautifulsoup4==4.9.1
 Flask>=1.1.2
 flask_jsonpify==1.5.0
 grafana-api==1.0.2
+imageio==2.9.0
+imageio-ffmpeg==0.4.2
 kavalkilu>=1.1.22
 lxml==4.5.1
 markovify==0.8.2
 meteocalc==1.1.0
+moviepy==1.0.3
 nltk==3.5
 numpy==1.18.4
 openwrt-luci-rpc==1.1.3
