--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,35 @@
-amcrest==1.7.1
-beautifulsoup4==4.9.1
+amcrest==1.7.2
+beautifulsoup4==4.9.3
 easylogger
 Flask>=1.1.2
 flask_jsonpify==1.5.0
-grafana-api==1.0.2
+grafana-api==1.0.3
 imutils==0.5.3
-kavalkilu>=1.1.22
-lxml==4.5.1
+kavalkilu
+lxml==4.6.2
 markovify==0.8.2
 meteocalc==1.1.0
 moviepy==1.0.3
 nltk==3.5
 numpy==1.19.4
 opencv-python==4.4.0.46
-openwrt-luci-rpc==1.1.3
-pandas==1.0.3
+openwrt-luci-rpc==1.1.7
+pandas==1.1.5
 Pillow==8.0.1
 phue==1.1
-pyecobee==1.3.5
+pyecobee==1.3.10
 pygsheets==2.0.3.1
 pylunar==0.6.0
 pykeepass==3.2.1
-pyowm==2.10.0
-python-yr==1.4.5
+pyowm==3.1.1
+python-yr==1.4.7.post2
 reolink_api
-requests>=2.23.0
+requests>=2.25.1
 roku==4.1.0
 selenium==3.141.0
-servertools>=1.1.13
+servertools
 setuptools==46.4.0
-slacktools>=0.0.5
+slacktools
 speedtest-cli==2.1.2
 SQLAlchemy==1.3.17
-versioneer==0.18
+versioneer==0.19
