--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ openwrt-luci-rpc==1.1.7
 pandas==1.1.5
 Pillow==8.0.1
 phue==1.1
+piecash==1.1.2
 pyecobee==1.3.10
 pygsheets==2.0.3.1
 pylunar==0.6.0
