--- a/requirements.txt
+++ b/requirements.txt
@@ -4,35 +4,35 @@ easylogger
 edgar==5.4.1
 Flask>=1.1.2
 flask_jsonpify==1.5.0
-grafana-api==1.0.3
-imutils==0.5.3
+grafana-api
+imutils
 kavalkilu
-lxml==4.6.2
-markovify==0.8.2
+lxml
+markovify
 meteocalc==1.1.0
 moviepy==1.0.3
-nltk==3.5
-numpy==1.19.4
-opencv-python==4.4.0.46
-openwrt-luci-rpc==1.1.7
-pandas==1.1.5
-Pillow==8.0.1
+nltk==3.6.2
+numpy
+opencv-python
+openwrt-luci-rpc
+pandas
+Pillow
 phue==1.1
-piecash==1.1.2
+piecash
 pyecobee==1.3.10
-pygsheets==2.0.3.1
-pylunar==0.6.0
-pykeepass==3.2.1
-pyowm==3.1.1
+pygsheets
+pylunar
+pykeepass
+pyowm
 python-yr==1.4.7.post2
 reolink_api
 requests>=2.25.1
 roku==4.1.0
 selenium==3.141.0
 servertools
-setuptools==46.4.0
+setuptools
 slacktools
-speedtest-cli==2.1.2
-SQLAlchemy==1.3.17
+speedtest-cli
+SQLAlchemy
 versioneer==0.19
 yahoofinancials==1.6
