--- a/api/rf_temps/rf_collect.service
+++ b/api/rf_temps/rf_collect.service
@@ -8,6 +8,7 @@ User=bobrock
 Group=bobrock
 Type=idle
 ExecStart=/home/bobrock/venvs/stools/bin/python3 /home/bobrock/extras/servertools/api/rf_temps/rf_collect.py -lvl info
+WorkingDirectory=/home/bobrock/extras/servertools
 Restart=on-failure
 
 [Install]
