--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,33 @@
-amcrest==1.7.2
-beautifulsoup4==4.9.3
-easylogger
-edgar==5.4.1
+amcrest>=1.9.3
+beautifulsoup4>=4.10.0
+easylogger @ git+https://github.com/barretobrock/easylogger@main#egg=easylogger
 Flask>=1.1.2
-flask_jsonpify==1.5.0
 grafana-api
 imutils
-kavalkilu
+kavalkilu @ git+https://github.com/barretobrock/kavalkilu@master#egg=kavalkilu
 lxml
 markovify
 meteocalc==1.1.0
 moviepy==1.0.3
-nltk==3.6.2
+nltk>=3.6.5
 numpy
 opencv-python
 openwrt-luci-rpc
 pandas
 Pillow
 phue==1.1
-piecash
-pyecobee==1.3.10
 pygsheets
 pylunar
-pykeepass
 pyowm
+python-dateutil
 python-yr==1.4.7.post2
 reolink_api
 requests>=2.25.1
 roku==4.1.0
-selenium==3.141.0
-servertools
+selenium>=4.0.0
 setuptools
-slacktools
+slacktools @ git+https://github.com/barretobrock/slacktools@master#egg=slacktools
 speedtest-cli>2.1.2
-SQLAlchemy
-versioneer==0.19
+SQLAlchemy>=1.4.26
+versioneer==0.21
 yahoofinancials==1.6
