--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,10 +50,18 @@ sqlalchemy = "1.4.32"
 yahoofinancials = "1.6"
 
 [tool.poetry.dev-dependencies]
+pre-commit = "^2.20.0"
 pytest = "^7.1.1"
 pytest-cov = "^3.0.0"
 flake8 = "^4.0.1"
 tox = "^3.24.5"
+
+[tool.isort]
+profile = 'black'
+force_grid_wrap = 2
+force_sort_within_sections = true
+skip_gitignore = true
+skip_glob = ['*_pb2.py', '*_pb2_grpc.py']
 
 [tool.poetry.extras]
 test = ["pytest"]
